Added Landing Page and Alert Dialogs

--- a/src/content/docs/accordion.mdx
+++ b/src/content/docs/accordion.mdx
@@ -307,7 +307,7 @@ export default AccordionFaqDemo;
 
 <br/> 
 ### Bordered Accordion
-<ComponentPreview name="accordion-bordered-demo">
+<ComponentPreview name="accordion-bordered-demo" language="tsx">
 {`import React from "react";
 import {
   Accordion,
@@ -363,7 +363,7 @@ export default AccordionBorderedDemo;
 </ComponentPreview>
 
 ### Shadowed Accordion
-<ComponentPreview name="accordion-shadowed-demo">
+<ComponentPreview name="accordion-shadowed-demo" language="tsx">
 {`import React from "react";
 import {
   Accordion,
@@ -419,7 +419,7 @@ export default AccordionShadowedDemo;
 </ComponentPreview>
 
 ### Multi Expand Accordion
-<ComponentPreview name="multi-expand-accordion-demo">
+<ComponentPreview name="multi-expand-accordion-demo" language="tsx">
 {`import React from "react";
 import {
   Accordion,
@@ -477,7 +477,7 @@ export default MultiExpandAccordion;
 
 ### Compact Accordion
 
-<ComponentPreview name="compact-accordion-demo">
+<ComponentPreview name="compact-accordion-demo" language="tsx">
 {`import React from "react";
 import {
   Accordion,
@@ -533,7 +533,7 @@ export default AccordionCompactDemo;
 </ComponentPreview>
 
 ### Spacious Accordion
-<ComponentPreview name="spacious-accordion-demo">
+<ComponentPreview name="spacious-accordion-demo" language="tsx">
 {`import React from "react";
 import {
   Accordion,
@@ -590,7 +590,7 @@ export default AccordionSpaciousDemo;
 
 
 ### Flat Accordion
-<ComponentPreview name="flat-accordion-demo">
+<ComponentPreview name="flat-accordion-demo" language="tsx">
 {`import React from "react";
 import {
   Accordion,
@@ -646,7 +646,7 @@ export default AccordionFlatDemo;
 </ComponentPreview>
 
 ### Outlined Accordion
-<ComponentPreview name="outlined-accordion-demo">
+<ComponentPreview name="outlined-accordion-demo" language="tsx">
 {`import React from "react";
 import {
   Accordion,
@@ -702,7 +702,7 @@ export default AccordionOutlineDemo;
 </ComponentPreview>
 
 ### Gradient Accordion
-<ComponentPreview name="gradient-accordion-demo">
+<ComponentPreview name="gradient-accordion-demo" language="tsx">
 {`import React from "react";
 import {
   Accordion,
@@ -758,7 +758,7 @@ export default AccordionGradientDemo;
 </ComponentPreview>
 
 ### Clickable Header Accordion
-<ComponentPreview name="accordion-clickable-header">
+<ComponentPreview name="accordion-clickable-header" language="tsx">
 {`import React from "react";
 import {
   Accordion,
@@ -820,7 +820,7 @@ export default AccordionClickableHeaderDemo;
 
 ### Interactive Accordion (Hover to See)
 
-<ComponentPreview name="interactive-accordion-demo">
+<ComponentPreview name="interactive-accordion-demo" language="tsx">
 {`import React from "react";
 import {
   Accordion,
@@ -881,7 +881,7 @@ export default AccordionInteractiveDemo;
 </ComponentPreview>
 
 ### Striped Accordion
-<ComponentPreview name="accordion-striped-demo">
+<ComponentPreview name="accordion-striped-demo" language="tsx">
 {`import React from "react";
 import {
   Accordion,
