--- a/src/content/docs/alert.mdx
+++ b/src/content/docs/alert.mdx
@@ -261,7 +261,7 @@ export const ShadAlert = ({
 
 ### Default Alert
 
-<ComponentPreview name="alert-default">
+<ComponentPreview name="alert-default" language="tsx"> 
 {`import { ShadAlert } from "@/components/common/shad-alert";
 import React from "react";
 
@@ -281,7 +281,7 @@ export default AlertDefault;
 </ComponentPreview>
 
 ### Custom Alert
-<ComponentPreview name="alert-custom">
+<ComponentPreview name="alert-custom" language="tsx">
 {`import { ShadAlert } from "@/components/common/shad-alert";
 import { Construction } from "lucide-react";
 import React from "react";
@@ -303,7 +303,7 @@ export default AlertCustom;
 </ComponentPreview>
 
 ### Light Alert
-<ComponentPreview name="alert-light">
+<ComponentPreview name="alert-light" language="tsx">
 {`import { ShadAlert } from "@/components/common/shad-alert";
 import React from "react";
 
@@ -325,7 +325,7 @@ export default AlertLight;
 
 ### Dark Alert
 
-<ComponentPreview name="alert-dark">
+<ComponentPreview name="alert-dark" language="tsx">
 {`import { ShadAlert } from "@/components/common/shad-alert";
 import React from "react";
 
@@ -345,7 +345,7 @@ export default AlertDark;
 </ComponentPreview>
 
 ### Accent Alert
-<ComponentPreview name="alert-accent">
+<ComponentPreview name="alert-accent" language="tsx">
 {`import { ShadAlert } from "@/components/common/shad-alert";
 import React from "react";
 
@@ -365,7 +365,7 @@ export default AlertAccent;
 </ComponentPreview>
 
 ### Success Alert
-<ComponentPreview name="alert-success">
+<ComponentPreview name="alert-success" language="tsx">
 {`import { ShadAlert } from "@/components/common/shad-alert";
 import React from "react";
 
@@ -386,7 +386,7 @@ export default AlertSuccess;
 </ComponentPreview>
 
 ### Error Alert
-<ComponentPreview name="alert-error">
+<ComponentPreview name="alert-error" language="tsx">
 {`import { ShadAlert } from "@/components/common/shad-alert";
 import { Button } from "@/components/ui/button";
 import React from "react";
@@ -413,7 +413,7 @@ export default AlertError;
 </ComponentPreview>
 
 ### Gradient Alert
-<ComponentPreview name="alert-gradient">
+<ComponentPreview name="alert-gradient" language="tsx">
 {`import { ShadAlert } from "@/components/common/shad-alert";
 import React from "react";
 
@@ -433,7 +433,7 @@ export default AlertGradient;
 </ComponentPreview>
 
 ### Neutral Alert
-<ComponentPreview name="alert-neutral">
+<ComponentPreview name="alert-neutral" language="tsx">
 {`import { ShadAlert } from "@/components/common/shad-alert";
 import React from "react";
 
@@ -453,7 +453,7 @@ export default AlertNeutral;
 </ComponentPreview>
 
 ### Info Alert
-<ComponentPreview name="alert-info">
+<ComponentPreview name="alert-info" language="tsx">
 {`import { ShadAlert } from "@/components/common/shad-alert";
 import React from "react";
 
@@ -474,7 +474,7 @@ export default AlertInfo;
 </ComponentPreview>
 
 ### Loading Alert
-<ComponentPreview name="alert-loading">
+<ComponentPreview name="alert-loading" language="tsx">
 {`import { ShadAlert } from "@/components/common/shad-alert";
 import React from "react";
 
@@ -494,7 +494,7 @@ export default AlertLoading;
 </ComponentPreview>
 
 ### Primary Alert
-<ComponentPreview name="alert-primary">
+<ComponentPreview name="alert-primary" language="tsx">
 {`import { ShadAlert } from "@/components/common/shad-alert";
 import React from "react";
 
@@ -514,7 +514,7 @@ export default AlertPrimary;
 </ComponentPreview>
 
 ### Secondary Alert
-<ComponentPreview name="alert-secondary">
+<ComponentPreview name="alert-secondary" language="tsx">
 {`import { ShadAlert } from "@/components/common/shad-alert";
 import React from "react";
 
@@ -534,7 +534,7 @@ export default AlertSecondary;
 </ComponentPreview>
 
 ### Timed Alert
-<ComponentPreview name="alert-timed">
+<ComponentPreview name="alert-timed" language="tsx">
 {`import { ShadAlert } from "@/components/common/shad-alert";
 import React from "react";
 
@@ -556,7 +556,7 @@ export default AlertTimed;
 
 
 ### Warning Alert
-<ComponentPreview name="alert-warning">
+<ComponentPreview name="alert-warning" language="tsx">
 {`import { ShadAlert } from "@/components/common/shad-alert";
 import { Button } from "@/components/ui/button";
 import React from "react";
